# ofCourse

./: .gitignore  MANIFEST.in  README.md  README.rst  README.rst.REMOVED.git-id  distribute_setup.py.REMOVED.git-id  push-to-opeshift.txt  requirements.txt  run.py.REMOVED.git-id  setup.cfg  test-requirements.txt  tox.ini
content/: InitialProjectStatusOutline.htm.REMOVED.git-id
docs/: Makefile  Makefile.REMOVED.git-id  calendar.rst  conf.py  conf.py.REMOVED.git-id  index.rst  internals.rst  ofcourse-workflow.dia  start.rst  start.rst.REMOVED.git-id
hflossk/: participants.py.REMOVED.git-id  run.py.REMOVED.git-id  schedule.yaml.REMOVED.git-id  site.py.REMOVED.git-id  syllabus.yaml.REMOVED.git-id
ofcourse/: blueprints.py  cal.py  course.ics  participants.py  participants.py.REMOVED.git-id  render.py  site.py  site.py.REMOVED.git-id  util.py  version.py
ofcourse-templates/: about.html  blogs.html  blogs.mak  calendar.html  home.html  master.html  master.mak  participant.html  participant.mak  profile.html  resources.html  syllabus.html
ofcourse/test_base/: README.md  setup.cfg  tox.ini
scripts/: attendance.py.REMOVED.git-id  grades.py.REMOVED.git-id  people.yaml.REMOVED.git-id
static/: bootstrap.zip.REMOVED.git-id  twitter-bootstrap-v2.3.2-2-gde683e9.zip.REMOVED.git-id
templates/: blogs.mak  blogs.mak.REMOVED.git-id  bugfix.html.REMOVED.git-id  bugfix.mak.REMOVED.git-id  carousel.html.REMOVED.git-id  fflight.mak.REMOVED.git-id  firstflight.mak.REMOVED.git-id  fluid.html.REMOVED.git-id  master.mak.REMOVED.git-id  syllabus.html.REMOVED.git-id  (+7 more)
(+498 files in other folders)
