[metadata]
name = ofcourse
author = Remy DeCausemaker
author-email = remyd@civx.us
summary = HFOSS course materials via flask
description-file = README.rst
license = ASL2.0
classifier =
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
keywords =
    courseware
    ofcourse
    hflossk
[files]
packages =
    ofcourse
[entry_points]
console_scripts =
    ofcourse = ofcourse.cli:cli
