[metadata]
name = ofcourse-content
author = Professor Science
author-email = spam@mail.com
summary = Python courseware with Flask on OpenShift
description-file = README.md
license = ASL2.0
classifier =
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
keywords =
    courseware
    ofcourse
    hflossk
